--- a/OmniFood/resources/css/style.css
+++ b/OmniFood/resources/css/style.css
@@ -12,6 +12,15 @@ html{
     font-weight: 300;
     text-rendering: optimizeLegibility;
 }
+
+.clearfix{zoom: 1}
+.clearfix{
+    content: '.';
+    clear: both;
+    display: block;
+    height: 0;
+    visibility: hidden;
+}
 .row{
     max-width: 1140px;
     margin: 0 auto;
@@ -243,4 +252,51 @@ section{
 }
 .section-features .long-copy{
     margin-bottom: 40px;
+}
+
+
+
+.steps-box:first-child{
+    text-align: right;
+    padding-right: 3%;
+    margin-top: 30px;
+    
+}
+.steps-box:last-child{
+
+    padding-left: 3%;
+    margin-top: 70px;
+}
+.app-screen{
+    width: 40%;
+}
+
+.works-step{
+    margin-bottom: 50px;
+}
+.works-step div{
+    color: #e67e22;
+    border: 2px solid #e67e22;
+    display: inline-block;
+    border-radius: 50%;
+    height: 55px;
+    width: 55px;
+    text-align: center;
+    padding: 5px;
+    float: left;
+    font-size: 150%;
+    margin-right: 35px;
+}
+
+.works-step:last-of-type{
+    margin-bottom: 80px;
+}
+
+.btn-app img{
+    height: 50px;
+    width: auto;
+    margin: 10px;
+}
+.section-steps{
+    background-color: #f4f4f4;
 }
