--- a/OmniFood/resources/css/style.css
+++ b/OmniFood/resources/css/style.css
@@ -32,6 +32,7 @@ header{
     background-repeat: no-repeat;
     background-position: center;
     height: 100vh;
+    background-attachment: fixed;
 }
 header h1{
     margin: 0;
@@ -91,7 +92,8 @@ h2:after{
 /* Buttons  */
 
 .btn:link,
-.btn:visited
+.btn:visited,
+input[type=submit]
 {
     margin-top: 0;
     margin-bottom: 20px;
@@ -104,7 +106,8 @@ h2:after{
 }
 
 .btn-full:link,
-.btn-full:visited
+.btn-full:visited,
+input[type=submit]
 {
     background-color: #e67e22;
     border: 1px solid #e67e22;
@@ -121,15 +124,17 @@ h2:after{
 }
 
 .btn-ghost:hover,
-.btn-ghost:active
-
+.btn-ghost:active,
+input[type=submit]
 {
     border: 1px solid #e67e22;
     color: #e67e22;
 }
 
 .btn:hover,
-.btn:active
+.btn:active,
+input[type=submit]:hover,
+input[type=submit]:active
 {
     background-color: #cf6d17;
 }
@@ -288,6 +293,12 @@ section{
     margin-right: 35px;
 }
 
+.btn-app:link,
+.btn-app:visited{
+    border: 0;
+
+}
+
 .works-step:last-of-type{
     margin-bottom: 80px;
 }
@@ -299,4 +310,243 @@ section{
 }
 .section-steps{
     background-color: #f4f4f4;
+}
+
+.box img{
+    width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+}
+.city-feature{
+    margin-bottom: 5px;
+}
+
+.icon-small{
+    display: inline-block;
+    widows: 30px;
+    text-align: center;
+    color: #e67e22;
+    font-size: 120%;
+    margin-right: 10px;
+
+
+    line-height: 120%;
+    vertical-align: middle; 
+    margin-top: -5px;
+    
+}
+
+a:link,
+a:visited{
+    color:#e67e22;
+    text-decoration: none;
+    border-bottom: 1px solid #e67e22;
+    padding-bottom: 1px;
+    transition: border-bottom 0.2s, color 0.2s;
+}
+
+a:hover,
+a:active{
+    color:#555;
+    border-bottom: 1px solid transparent;
+}
+
+
+.section-testimonials{
+    background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)), url(img/back-customers.jpg);
+    background-size: cover;
+    color: #fff;
+
+
+    background-attachment: fixed;
+
+}
+
+blockquote{
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+    position: relative;
+}
+cite{
+    font-size: 90%;
+    margin-top: 25px;
+    display: block;
+   
+}
+
+blockquote:before{
+    content: '\201C';
+    font-size: 400%;
+    display: block;
+    position: absolute;
+    top: -20px;
+    left: 0;
+    margin-top: 25px;
+}
+
+cite img{
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
+
+.plan-box{
+    background-color: #f4f4f4;
+    border-radius: 5px;
+    width: 90%;
+    margin-left: 5%;
+    box-shadow: 0 2px 2px #e8e8e8;
+}
+
+.plan-box div{
+    padding: 15px;
+    border-bottom: 1px solid #e8e8e8;
+}
+
+.plan-price{
+    font-size: 300%;
+    margin-top: 5px;
+    font-weight: 100;
+    color: #e67e22;
+}
+
+.plan-price-meal{
+    font-size: 80%;
+}
+
+.plan-price span{
+    font-size: 30%;
+}
+
+.plan-box ul{
+    list-style: none;
+}
+
+.plan-box ul li{
+    padding: 5px 0;
+}
+
+.plan-box div:last-child{
+    text-align: center;
+    border: 0;
+}
+
+.plan-box div:first-child{
+    background-color: #fcfcfc;
+    border-top-left-radius: 5px;
+    border-top-left-radius: 5px;
+}
+
+
+.contact-form{
+    width: 60%;
+    margin: 0 auto;
+}
+
+input[type=text],
+input[type=email],
+select,
+textarea{
+    width: 100%;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+textarea{
+    height: 100px;
+}
+
+input[type=submit]
+{
+    color: #fff;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+input[type=checkbox]{
+    margin: 10px 5px 10px 0;
+}
+
+*:focus{
+        outline: none;
+}
+
+footer{
+    background-color: #333;
+    padding: 40px;
+    font-size: 80%;
+}
+.footer-nav{
+    list-style: none;
+    float: left;
+}
+
+.social-links{
+    list-style: none;
+    float: right;
+}
+
+.footer-nav li,
+.social-links li{
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child{
+    margin: 0;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited
+{
+    text-decoration: none;
+    border: 0;
+    color: #888;
+    transition: color 0.2s;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active{
+    color:#ddd;
+}
+
+footer p{
+    color: #888;
+    text-align: center;
+    font-size: 90%;
+    margin-top: 30px;
+}
+
+.social-links li a:link,
+.social-link li a:visited{
+    font-size: 180%;
+}
+
+
+.facebook,
+.twitter,
+.google,
+.instagram{
+    transition: color 0.8s;
+}
+
+
+
+.facebook:hover{
+    color:#3b5998;
+}
+.twitter:hover{
+    color:#00aced;
+}
+.google:hover{
+    color:#dd4b39;
+}
+.instagram:hover{
+    color:#e4405f;
 }
