--- a/OmniFood/resources/css/style.css
+++ b/OmniFood/resources/css/style.css
@@ -4,13 +4,14 @@
     box-sizing: border-box;
 }
 
-html{
+html,body{
     background-color: #fff;
     color: #555;
     font-family: 'Lato', 'Arial', sans-serif;
     font-size: 20px;
     font-weight: 300;
     text-rendering: optimizeLegibility;
+    overflow-x: hidden;
 }
 
 .clearfix{zoom: 1}
@@ -27,6 +28,7 @@ html{
 }
 
 header{
+    background-image: -webkit-gradient(linear,left top, left bottom,from(rgba(0,0,0,0.7)),to(rgba(0,0,0,0.7))), url(img/hero.jpg);
     background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(img/hero.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -46,7 +48,8 @@ header h1{
     width: 1140px;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,50%);
+    -webkit-transform: translate(-50%,50%);
+            transform: translate(-50%,50%);
 }
 
 h1,
@@ -102,6 +105,7 @@ input[type=submit]
     font-weight: 300px;
     text-decoration: none;
     border-radius: 200px;
+    -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
     transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
@@ -180,6 +184,7 @@ input[type=submit]:active
     text-transform: uppercase;
     font-size: 90%;
     border-bottom: 2px solid transparent;
+    -webkit-transition: border-bottom 0.2s ease-in;
     transition: border-bottom 0.2s ease-in;
     padding: 10px 0;
 }
@@ -195,7 +200,8 @@ input[type=submit]:active
 
                             /* section */
 section{
-    padding-inline-start: 80px 0;
+    -webkit-padding-start: 80px 0;
+            padding-inline-start: 80px 0;
 }
 
 
@@ -222,7 +228,8 @@ section{
     color: #e67e22;
     margin: 0 auto;
     margin-bottom: 20px;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
 }
 
 .meals-showcase{
@@ -247,12 +254,17 @@ section{
     opacity: 0.5;
     width: 100%;
     height: auto;
-    transform: scale(1.15);
+    -webkit-transform: scale(1.15);
+            transform: scale(1.15);
+    -webkit-transition: opacity 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
+    transition: opacity 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
     transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
+    transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
 }
 
 .meal-photo img:hover{
-    transform: scale(1.03);
+    -webkit-transform: scale(1.03);
+            transform: scale(1.03);
     opacity: 1;
 }
 .section-features .long-copy{
@@ -342,6 +354,7 @@ a:visited{
     text-decoration: none;
     border-bottom: 1px solid #e67e22;
     padding-bottom: 1px;
+    -webkit-transition: border-bottom 0.2s, color 0.2s;
     transition: border-bottom 0.2s, color 0.2s;
 }
 
@@ -353,6 +366,7 @@ a:active{
 
 
 .section-testimonials{
+    background-image: -webkit-gradient(linear,left top, left bottom,from(rgba(0,0,0,0.8)),to(rgba(0,0,0,0.8))), url(img/back-customers.jpg);
     background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)), url(img/back-customers.jpg);
     background-size: cover;
     color: #fff;
@@ -508,6 +522,7 @@ footer{
     text-decoration: none;
     border: 0;
     color: #888;
+    -webkit-transition: color 0.2s;
     transition: color 0.2s;
 }
 
@@ -533,6 +548,7 @@ footer p{
 .twitter,
 .google,
 .instagram{
+    -webkit-transition: color 0.8s;
     transition: color 0.8s;
 }
 
